# windows-global-mic-control

./: Cargo.toml  LICENSE  README.md
src/: main.rs
