# Adds recommended packages below
[package]
name = "wgmc"
version = "0.2.0"
description = "Toggles the global mute on Windows"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
notify-rust = "4.11.7"
windows = { version = "0.61.1", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_Media_KernelStreaming",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_UI_Notifications",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
